Try to fix (again) table right column's text size weid behavior on mobile's desktop mode

--- a/themes/lost-theme/assets/css/main.css
+++ b/themes/lost-theme/assets/css/main.css
@@ -1121,7 +1121,6 @@ table {
 }
 
 th, td {
-	container-type: inline-size;
 	padding: 0.2em 0.4em;
 	border-right: 1px solid var(--gray-A5);
 	border-bottom: 1px solid var(--gray-A5);
